# AutoSkill

./: .env  .gitignore  README.md  README.zh-CN.md  STATUS.md  pyproject.toml  set_env.sh
AutoSkill4Doc/: README.md  README.zh-CN.md  __init__.py  __main__.py  compiler.py  extract.py  extractor.py  family_resolver.py  file_loader.py  inducer.py  ingest.py  models.py  pipeline.py  profile.py  prompt_runtime.py  prompts.py  registry.py  taxonomy.py  versioning.py
AutoSkill4Doc/core/: __init__.py  common.py  config.py  llm_utils.py  provider_config.py
AutoSkill4Doc/document/: __init__.py  file_loader.py  windowing.py
AutoSkill4Doc/domain_profiles/: __init__.py  default.json  psychology.json
AutoSkill4OpenClaw/: agentic_prompt_profile.py  install.py  openclaw_prompt_pack.py
OpenClaw-Plugin/: README.md  README.zh-CN.md  agentic_prompt_profile.py  install.py  openclaw_conversation_archive.py  openclaw_main_turn_proxy.py  openclaw_skill_mirror.py  run_proxy.py  service_runtime.py  sidecar.manifest.json
autoskill/: __main__.py  cli.py  render.py
data/: offline_extract_by_user_report.json  skillbank_cn_en_for_paper.tex
examples/: __init__.py  web_ui.py
skillcontroller_pipeline/: __init__.py  data_converter.py  feature_extractor.py  instrumented_sdk.py  skill_quality_gate.py
tests/: test_document_cli.py  test_document_file_loader.py  test_document_models.py  test_document_pipeline.py  test_document_profiles.py  test_document_provider_config.py  test_document_registry.py  test_document_taxonomy.py  test_document_versioning.py  test_document_windowing.py
(+7150 files in other folders)
